frontend/src/services/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telemedicina
  labels:
    app: sistema-telemedicina
